# serializer version: 1
# name: test_column_override[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_column_override[session-tracked-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_column_override[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_column_override[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_column_override[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_column_override[session-tracked-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createColor-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createColor-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createColor-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createColor-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createColor-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createColor-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-manual-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColor-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-manual-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create[session-tracked-createValidatedColorAllFragments-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create_many[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_many[session-tracked-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create_many[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_many[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create_many[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_many[session-tracked-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-asyncpg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-asyncpg_engine].2
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-psycopg_async_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-async-psycopg_async_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-sync-psycopg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-add-sync-psycopg_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-asyncpg_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-asyncpg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-asyncpg_engine].2
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-psycopg_async_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-psycopg_async_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-async-psycopg_async_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-sync-psycopg_engine]
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-sync-psycopg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_existing_to_many[session-tracked-set-sync-psycopg_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].3
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].4
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::UUID, $4::TIMESTAMP WITH TIME ZONE, $5::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].3
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].4
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(fruit_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].3
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].4
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(fruit_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-asyncpg_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-async-psycopg_async_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create[session-tracked-sync-psycopg_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine]
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine]
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine]
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-asyncpg_engine]
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-asyncpg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-psycopg_async_engine]
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-async-psycopg_async_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-sync-psycopg_engine]
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create[session-tracked-sync-psycopg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine]
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine].2
  '''
  INSERT INTO "user" (name, group_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::UUID, $4::TIMESTAMP WITH TIME ZONE, $5::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine]
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine].2
  '''
  INSERT INTO "user" (name, group_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(group_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine]
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine].2
  '''
  INSERT INTO "user" (name, group_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(group_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-async-asyncpg_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-async-psycopg_async_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-sync-psycopg_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-async-asyncpg_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-async-psycopg_async_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-sync-psycopg_engine]
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_create_with_to_one_set_null[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_delete_all[session-tracked-async-asyncpg_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
  '''
# ---
# name: test_delete_all[session-tracked-async-asyncpg_engine].1
  '''
  DELETE
    FROM "user" AS "user"
  '''
# ---
# name: test_delete_all[session-tracked-async-psycopg_async_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
  '''
# ---
# name: test_delete_all[session-tracked-async-psycopg_async_engine].1
  '''
  DELETE
    FROM "user" AS "user"
  '''
# ---
# name: test_delete_all[session-tracked-sync-psycopg_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
  '''
# ---
# name: test_delete_all[session-tracked-sync-psycopg_engine].1
  '''
  DELETE
    FROM "user" AS "user"
  '''
# ---
# name: test_delete_filter[session-tracked-async-asyncpg_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
   WHERE "user".name = $1::VARCHAR
  '''
# ---
# name: test_delete_filter[session-tracked-async-asyncpg_engine].1
  '''
  DELETE
    FROM "user" AS "user"
   WHERE "user".name = $1::VARCHAR RETURNING "user".id
  '''
# ---
# name: test_delete_filter[session-tracked-async-psycopg_async_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
   WHERE "user".name = %(name_2)s::VARCHAR
  '''
# ---
# name: test_delete_filter[session-tracked-async-psycopg_async_engine].1
  '''
  DELETE
    FROM "user" AS "user"
   WHERE "user".name = %(name_1)s::VARCHAR RETURNING "user".id
  '''
# ---
# name: test_delete_filter[session-tracked-sync-psycopg_engine]
  '''
  SELECT user__group.name,
         user__group.id,
         "user".name AS name_1,
         "user".id AS id_1
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
   WHERE "user".name = %(name_2)s::VARCHAR
  '''
# ---
# name: test_delete_filter[session-tracked-sync-psycopg_engine].1
  '''
  DELETE
    FROM "user" AS "user"
   WHERE "user".name = %(name_1)s::VARCHAR RETURNING "user".id
  '''
# ---
# name: test_update[session-tracked-no-validation-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update[session-tracked-no-validation-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-no-validation-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-no-validation-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-no-validation-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-no-validation-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-fragment-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update[session-tracked-validation-fragment-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-fragment-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-validation-fragment-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-fragment-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-validation-fragment-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update[session-tracked-validation-no-fragment-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color AS color
     SET name = $1::VARCHAR
   WHERE color.name = $2::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter[session-tracked-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color AS color
     SET name = %(name)s::VARCHAR
   WHERE color.name = %(name_1)s::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color AS color
     SET name = %(name)s::VARCHAR
   WHERE color.name = %(name_1)s::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter[session-tracked-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color AS color
     SET name = $1::VARCHAR
   WHERE color.name = $2::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color AS color
     SET name = %(name)s::VARCHAR
   WHERE color.name = %(name_1)s::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color AS color
     SET name = %(name)s::VARCHAR
   WHERE color.name = %(name_1)s::VARCHAR RETURNING color.id
  '''
# ---
# name: test_update_by_filter_only_return_affected_objects[session-tracked-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_many[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_many[session-tracked-async-asyncpg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_many[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_many[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_many[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_many[session-tracked-sync-psycopg_engine].1
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.id IN (__[POSTCOMPILE_id_1])
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].3
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::UUID, $4::TIMESTAMP WITH TIME ZONE, $5::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].4
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-asyncpg_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].3
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(fruit_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].4
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-async-psycopg_async_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO derived_product (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].1
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].2
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].3
  '''
  INSERT INTO fruit_farm (name, fruit_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(fruit_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].4
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_nested_mixed_relations_create[session-tracked-sync-psycopg_engine].5
  '''
  SELECT fruits__farms.name,
         fruits__farms.id,
         fruits__product.name AS name_1,
         fruits__product.id AS id_1,
         color__fruits.name AS name_2,
         color__fruits.id AS id_2,
         color.name AS name_3,
         color.id AS id_3
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN derived_product AS fruits__product
      ON fruits__product.id = color__fruits.derived_product_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_4])
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-asyncpg_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-async-psycopg_async_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add[session-tracked-sync-psycopg_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-asyncpg_engine].2
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-asyncpg_engine].3
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-psycopg_async_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-async-psycopg_async_engine].3
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-sync-psycopg_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_add_and_create[session-tracked-sync-psycopg_engine].3
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-asyncpg_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-async-psycopg_async_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create[session-tracked-sync-psycopg_engine].2
  '''
  SELECT color__fruits.name,
         color__fruits.id,
         color.name AS name_1,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TEXT[], $4::UUID, $5::UUID, $6::TIMESTAMP WITH TIME ZONE, $7::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine].2
  '''
  UPDATE fruit_farm
     SET name = $1::VARCHAR,
         fruit_id = $2::UUID,
         id = $3::UUID,
         created_at = $4::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $5::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit_farm.id = $6::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-asyncpg_engine].3
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine].2
  '''
  UPDATE fruit_farm
     SET name = %(name)s::VARCHAR,
         fruit_id = %(fruit_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit_farm.id = %(fruit_farm_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-async-psycopg_async_engine].3
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO fruit (name, color_id, adjectives, derived_product_id, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(color_id)s::UUID, %(adjectives)s::TEXT[], %(derived_product_id)s::UUID, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine].2
  '''
  UPDATE fruit_farm
     SET name = %(name)s::VARCHAR,
         fruit_id = %(fruit_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit_farm.id = %(fruit_farm_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_create_and_nested_set[session-tracked-sync-psycopg_engine].3
  '''
  SELECT fruits__farms.id,
         color__fruits.name,
         color__fruits.id AS id_1,
         color.name AS name_1,
         color.id AS id_2
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
    LEFT OUTER JOIN fruit_farm AS fruits__farms
      ON color__fruits.id = fruits__farms.fruit_id
   WHERE color.id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-asyncpg_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-async-psycopg_async_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_remove[session-tracked-sync-psycopg_engine].2
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-asyncpg_engine]
  '''
  UPDATE color
     SET name = $1::VARCHAR,
         id = $2::UUID,
         created_at = $3::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $4::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = $5::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.color_id IN (__[POSTCOMPILE_color_id_1])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-asyncpg_engine].2
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-asyncpg_engine].3
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.color_id IN (__[POSTCOMPILE_color_id_1])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-psycopg_async_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-async-psycopg_async_engine].3
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-sync-psycopg_engine]
  '''
  UPDATE color
     SET name = %(name)s::VARCHAR,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE color.id = %(color_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.color_id IN (__[POSTCOMPILE_color_id_1])
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-sync-psycopg_engine].2
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_many_set[session-tracked-sync-psycopg_engine].3
  '''
  SELECT color__fruits.id,
         color.name,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-asyncpg_engine].2
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-async-psycopg_async_engine].2
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO color (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create[session-tracked-sync-psycopg_engine].2
  '''
  SELECT fruit__color.name,
         fruit__color.id,
         fruit.name AS name_1,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine]
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES ($1::VARCHAR, $2::UUID, $3::TIMESTAMP WITH TIME ZONE, $4::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine].1
  '''
  UPDATE "user"
     SET name = $1::VARCHAR,
         group_id = $2::UUID,
         id = $3::UUID,
         created_at = $4::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $5::TIMESTAMP WITH TIME
    ZONE
   WHERE "user".id = $6::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine].2
  '''
  UPDATE topic
     SET name = $1::VARCHAR,
         group_id = $2::UUID,
         id = $3::UUID,
         created_at = $4::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $5::TIMESTAMP WITH TIME
    ZONE
   WHERE topic.id = $6::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-asyncpg_engine].3
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine]
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine].1
  '''
  UPDATE "user"
     SET name = %(name)s::VARCHAR,
         group_id = %(group_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE "user".id = %(user_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine].2
  '''
  UPDATE topic
     SET name = %(name)s::VARCHAR,
         group_id = %(group_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE topic.id = %(topic_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-async-psycopg_async_engine].3
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine]
  '''
  INSERT INTO "group" (name, id, created_at, updated_at)
  VALUES (%(name)s::VARCHAR, %(id)s::UUID, %(created_at)s::TIMESTAMP WITH TIME ZONE, %(updated_at)s::TIMESTAMP WITH TIME ZONE)
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine].1
  '''
  UPDATE "user"
     SET name = %(name)s::VARCHAR,
         group_id = %(group_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE "user".id = %(user_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine].2
  '''
  UPDATE topic
     SET name = %(name)s::VARCHAR,
         group_id = %(group_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE topic.id = %(topic_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_create_and_nested_set[session-tracked-sync-psycopg_engine].3
  '''
  SELECT group__topics.id,
         user__group.name,
         user__group.id AS id_1,
         "user".name AS name_1,
         "user".id AS id_2
    FROM "user" AS "user"
    LEFT OUTER JOIN "group" AS user__group
      ON user__group.id = "user".group_id
    LEFT OUTER JOIN topic AS group__topics
      ON user__group.id = group__topics.group_id
   WHERE "user".id IN (__[POSTCOMPILE_id_3])
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-async-asyncpg_engine]
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-async-asyncpg_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-sync-psycopg_engine]
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_set[session-tracked-sync-psycopg_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-async-asyncpg_engine]
  '''
  UPDATE fruit
     SET name = $1::VARCHAR,
         color_id = $2::UUID,
         adjectives = $3::TEXT[], derived_product_id = $4::UUID,
         id = $5::UUID,
         created_at = $6::TIMESTAMP WITH TIME
    ZONE,
         updated_at = $7::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = $8::UUID
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-async-asyncpg_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-async-psycopg_async_engine]
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-async-psycopg_async_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-sync-psycopg_engine]
  '''
  UPDATE fruit
     SET name = %(name)s::VARCHAR,
         color_id = %(color_id)s::UUID,
         adjectives = %(adjectives)s::TEXT[], derived_product_id = %(derived_product_id)s::UUID,
         id = %(id)s::UUID,
         created_at = %(created_at)s::TIMESTAMP WITH TIME
    ZONE,
         updated_at = %(updated_at)s::TIMESTAMP WITH TIME
    ZONE
   WHERE fruit.id = %(fruit_id)s::UUID
  '''
# ---
# name: test_update_with_to_one_set_null[session-tracked-sync-psycopg_engine].1
  '''
  SELECT fruit__color.id,
         fruit.name,
         fruit.id AS id_1
    FROM fruit AS fruit
    LEFT OUTER JOIN color AS fruit__color
      ON fruit__color.id = fruit.color_id
   WHERE fruit.id IN (__[POSTCOMPILE_id_2])
  '''
# ---
